--- a/force-app/main/default/classes/SummitEventsShared.cls
+++ b/force-app/main/default/classes/SummitEventsShared.cls
@@ -431,27 +431,37 @@ public with sharing class SummitEventsShared {
     }
 
     public String navBreadcrumbBuilder(Summit_Events_Instance__c eventInstance) {
-
         String instanceDate = '';
 
         if (eventInstance.Instance_Start_Date__c != null && eventInstance.Instance_End_Date__c != null) {
-            //Get timezone to check if offset is not 0 (not GMT)
             TimeZone tz = UserInfo.getTimeZone();
             Integer timezoneOffset = tz.getOffset(Datetime.now());
-
-            Datetime convertedStartDate = Datetime.newInstance(
-                    eventInstance.Instance_Start_Date__c,
-                    eventInstance.Instance_Start_Time__c
-            );
-            Datetime convertedEndDate = Datetime.newInstanceGmt(
-                    eventInstance.Instance_End_Date__c,
-                    eventInstance.Instance_End_Time__c
-            );
+            Date startDate = eventInstance.Instance_Start_Date__c;
+            Date endDate = eventInstance.Instance_End_Date__c;
+            Datetime convertedStartDate;
+            Datetime convertedEndDate;
 
             //If the user is logged in and offset for user is not GMT than adjust datetime to act like GMT by removing the offset
             if (timezoneOffset != 0) {
+                convertedStartDate = Datetime.newInstance(
+                        startDate,
+                        eventInstance.Instance_Start_Time__c
+                );
+                convertedEndDate = Datetime.newInstanceGmt(
+                        endDate,
+                        eventInstance.Instance_End_Time__c
+                );
                 convertedStartDate = convertedStartDate.addSeconds(-(timezoneOffset) / 1000);
                 convertedEndDate = convertedEndDate.addSeconds(-(timezoneOffset) / 1000);
+            } else {
+                convertedStartDate = Datetime.newInstanceGmt(
+                        startDate,
+                        noTime
+                );
+                convertedEndDate = Datetime.newInstanceGmt(
+                        endDate,
+                        noTime
+                );
             }
 
             String monthStart = convertedStartDate.format('MMMM');
